# stack-mr

./: README.md  pyproject.toml
src/stack_pr/: cli.py  git.py
