[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "stack-mr"
authors = [
    {name = "River707", email = "..."},
]
maintainers = [
    {name = "River707", email = "..."}
]
description = "Stacked MR CLI for GitLab"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["stacked-prs", "gitlab", "pull-requests", "stack-mr", "git", "version-control"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control :: Git",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
]
# Version is dynamically set by pdm by the SCM version
dynamic = ["version"]
dependencies = []

[project.urls]
Homepage = "https://github.com/River707/stack-mr"
Repository = "https://github.com/River707/stack-mr"
"Bug Tracker" = "https://github.com/River707/stack-mr/issues"

[project.scripts]
stack-mr = "stack_pr.cli:main"

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"
fallback_version = "0.1.0"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "osx-64", "linux-64", "linux-aarch64"]

[tool.pixi.pypi-dependencies]
stack-mr = { path = ".", editable = true }
pdm = ">=2.17.1,<2.18"

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.8"
